added footer section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
-
         <!-- features section start here -->
         <section class="features display-flex">
             <div class="">
@@ -127,10 +126,11 @@
                 <img src="images/sponsors/figma.png" alt="">
             </div>
         </section>
-
     </main>
     <footer>
-
+        <section class="footer">
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </section>
     </footer>
 </body>
 </html>
